refactor ui for create admin user

--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -36,13 +36,13 @@
                             <a class="redirect-forgot-password text-link" style="color:dimgray;"
                                asp-controller="Account" asp-action="ForgotPass">Forgot your password?</a>
                         </div>
-                        <div class="mb-3 form-link">
+                        @* <div class="mb-3 form-link">
                             <span style="color:dimgray;">
                                 No account?
                                 <a class="redirect-sign-up text-link" asp-controller="Account"
                                    asp-action="Register">Sign up</a>
                             </span>
-                        </div>
+                        </div> *@
                         <button type="submit" class="btn btn-primary login-btn">Sign In</button>
 
                     </form>
