--- a/ASI.Basecode.WebApp/Views/Account/Register.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Register.cshtml
@@ -55,16 +55,16 @@
                                        style="background-color: #E7E7E7; border-radius: 10px;" />
                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
-                            <div class="text-right">
+                            @* <div class="text-right">
                                 <span style="color: #818181; font-size: 14px;">Already a member?</span>
                                 <a asp-controller="Account" asp-action="Login" style="color: #FF7519; font-size: 14px;">
                                     Sign in
                                 </a>
-                            </div>
+                            </div> *@
 
                             <div class="text-center pt-1 pb-1 d-flex flex-column align-items-center" style="margin-top: 30px">
                                 <button class="btn btn-primary btn-block login-btn mb-3" style="border-radius: 20px; background-color: #FF7519; font-size: 20px;" type="submit">
-                                    Register
+                                    Create Admin User
                                 </button>
                                
                             </div>
