--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="col col-right">
-                <a href="@Url.Action("Create", "Author")" class="btn btn-skooby btn-primary">Add New User</a>
+                <a href="@Url.Action("Register", "Account")" class="btn btn-skooby btn-primary">Add New User</a>
             </div>
         </div>
 
