--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -53,7 +53,8 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
             <tr>
                 <th>ID</th>
                 <th>Title</th>
-                <th>Author</th>
+                <th>Authors</th>
+                <th>Genres</th>
                 <th>Actions</th>
             </tr>
         </thead>
