iz not yet done at all.

--- a/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
 @model ForgotPasswordViewModel
+
 @{
     ViewData["Title"] = "Forgot Password";
 }
@@ -6,12 +7,12 @@
 <h2>@ViewData["Title"]</h2>
 <p>Enter your email to reset your password.</p>
 
-<form asp-action="ForgotPassword">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Email"></label>
-        <input asp-for="Email" />
-        <span asp-validation-for="Email"></span>
+<form asp-controller="Account" asp-action="ForgotPassword" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Email">Email</label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <button type="submit">Send</button>
+    <button type="submit" class="btn btn-primary">Send Reset Link</button>
 </form>
