--- a/Skooby.WebApp/Views/Home/NewBooks.cshtml
+++ b/Skooby.WebApp/Views/Home/NewBooks.cshtml
@@ -6,41 +6,95 @@
 }
 
 @section styles {
-    <link rel="stylesheet" href="~/css/dashboard.css" />
+    
     <link rel="stylesheet" href="~/css/style.css" />
     <link rel="stylesheet" href="~/css/newbooks.css" />
+    <link rel="stylesheet" href="~/css/pagination.css" />
+    <link rel="stylesheet" href="~/css/dashboard.css" />
 }
  
+
+<style>
+    .new-books-container {
+        width: 740px;
+        height: 450px;
+    }                            
+   .page-link {
+       padding: 0 !important
+   }
+</style>
+
 <section class="new-books-section new-books-dashboard">
     <div>
-        <h1> Unveiling New Worlds in Every Page</h1>
+        <h1>Unveiling New Worlds in Every Page</h1>
         <h2>Read the latest!</h2>
         <h3>New books</h3>
     </div>
-   
-    
+
     <hr />
-    <div class="book-wrapper">
-        @{
-            var recentBooks = Model.Select(book => book);
-        }
-        @foreach (var book in recentBooks)
-        {
-            <div class="book-content">
-                <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
-                    <div class="book-image-preview">
-                        <img class="book-image" src="@book.Image ?? " /img/about-us.png"" alt="@book.Name" />
+
+    <div class="new-books-container" id="book-wrapper">
+        
+        <div class="book-wrapper">
+            @{
+                var recentBooks = Model;
+            }
+            @foreach (var book in recentBooks)
+            {
+                <div class="book-content">
+                    <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
+                        <div class="book-image-preview">
+                            <img class="book-image" src="@book.Image ?? " /img/about-us.png"" alt="@book.Name" />
+                        </div>
+                    </a>
+                    <div class="book-info-card" id="per-book-info-@book.Id">
+                        <h5 class="book-title book-text">@book.Name</h5>
+                        <p class="author-name book-text">by @string.Join(", ", book.AuthorNames) • @book.PublishedOn.Year</p>
+                        <p class="book-description book-text">@book.Description</p>
                     </div>
-                </a>
-                <div class="book-info-card" id="per-book-info-@book.Id">
-                    <h5 class="book-title book-text">@book.Name</h5>
-                    <p class="author-name book-text">by @string.Join(", ", book.AuthorNames) • @book.PublishedOn.Year</p>
-                    <p class="book-description book-text">@book.Description</p>
                 </div>
-            </div>
-        }
+            }
+
+        </div>
+   </div>
+    <div class="pagination-container">
+        <!-- Pagination -->
+        <div class="pagination">
+            @if (ViewBag.CurrentPage > 5)
+            {
+                <a href="@Url.Action("NewBooks", "Home", new { pageNo = ViewBag.CurrentPage - 1 })" class="prev-next">&lt;</a>
+            }
+
+            @for (int i = Math.Max(1, ViewBag.CurrentPage - 5); i <= Math.Min(ViewBag.TotalPages, ViewBag.CurrentPage + 5); i++)
+            {
+                if (i == ViewBag.CurrentPage)
+                {
+                    <span class="current-page">@i </span>
+                }
+                else
+                {
+                    <a href="@Url.Action("NewBooks", "Home", new { pageNo = i })" class="page-link" >@i</a>
+                }
+            }
+
+            @if (ViewBag.CurrentPage < ViewBag.TotalPages - 5)
+            {
+                <span>...</span>
+            }
+
+            @if (ViewBag.TotalPages > 5 && ViewBag.CurrentPage < ViewBag.TotalPage -  4 )
+            {
+                <a href="@Url.Action("NewBooks", "Home", new { pageNo = ViewBag.CurrentPage + 1 })" class="prev-next">&gt;</a>
+            }
     </div>
+    </div>
+
+
 </section>
+
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
  <script>
