genre in alphabetical order  and top and new books pagination fix

--- a/Skooby.WebApp/Views/Home/NewBooks.cshtml
+++ b/Skooby.WebApp/Views/Home/NewBooks.cshtml
@@ -62,29 +62,38 @@
         <div class="pagination">
             @if (ViewBag.CurrentPage > 5)
             {
-                <a href="@Url.Action("NewBooks", "Home", new { pageNo = ViewBag.CurrentPage - 1 })" class="prev-next">&lt;</a>
+                int previousViewLastPage = (ViewBag.CurrentPage / 5) * 5;
+
+                <a href="@Url.Action("NewBooks", "Home", new { pageNo = previousViewLastPage })" class="prev-next">&lt;</a>
             }
 
-            @for (int i = Math.Max(1, ViewBag.CurrentPage - 5); i <= Math.Min(ViewBag.TotalPages, ViewBag.CurrentPage + 5); i++)
+            @{
+                int startPage = ((ViewBag.CurrentPage - 1) / 5) * 5 + 1;
+                int endPage = Math.Min(startPage + 4, ViewBag.TotalPages);
+            }
+
+            @for (int i = startPage; i <= endPage; i++)
             {
                 if (i == ViewBag.CurrentPage)
                 {
-                    <span class="current-page">@i </span>
+                    <span class="current-page">@i</span>
                 }
                 else
                 {
-                    <a href="@Url.Action("NewBooks", "Home", new { pageNo = i })" class="page-link" >@i</a>
+                    <a href="@Url.Action("NewBooks", "Home", new { pageNo = i })" class="page-link">@i</a>
                 }
             }
-
-            @if (ViewBag.CurrentPage < ViewBag.TotalPages - 5)
+            @if (ViewBag.CurrentPage <= (ViewBag.TotalPages - (ViewBag.TotalPages % 5)) && ViewBag.TotalPages > 5)
             {
                 <span>...</span>
             }
 
-            @if (ViewBag.TotalPages > 5 && ViewBag.CurrentPage < ViewBag.TotalPage -  4 )
+            @if (ViewBag.CurrentPage <= (ViewBag.TotalPages - (ViewBag.TotalPages % 5)) && ViewBag.TotalPages > 5)
             {
-                <a href="@Url.Action("NewBooks", "Home", new { pageNo = ViewBag.CurrentPage + 1 })" class="prev-next">&gt;</a>
+              
+                int nextViewFirstPage = ViewBag.CurrentPage < 6 ? 6 : (ViewBag.CurrentPage / 5) * 5 + 6;
+
+                <a href="@Url.Action("NewBooks", "Home", new { pageNo = nextViewFirstPage })" class="prev-next">&gt;</a>
             }
     </div>
     </div>
