--- a/Skooby.WebApp/Views/Home/Index.cshtml
+++ b/Skooby.WebApp/Views/Home/Index.cshtml
@@ -34,7 +34,9 @@
     <div class="container-wrapper">
         <div class="content-wrapper">
             @{
-                var uniqueGenres = Model.SelectMany(book => book.GenreNames).Distinct();
+                var uniqueGenres = Model.SelectMany(book => book.GenreNames)
+                .Distinct()
+                .OrderBy(genre => genre);
             }
 
             @foreach (var genre in uniqueGenres)
@@ -93,7 +95,7 @@
                 <h3 class="filter-genretitle">Genres</h3>
 
                 <div class="filter-category-container">
-                    @foreach (var genre in Model.SelectMany(book => book.GenreNames).Distinct())
+                    @foreach (var genre in Model.SelectMany(book => book.GenreNames).Distinct().OrderBy(genre => genre))
                     {
                         <p class="filter-category-titles">@genre</p>
                     }
