--- a/Skooby.WebApp/wwwroot/css/dashboard.css
+++ b/Skooby.WebApp/wwwroot/css/dashboard.css
@@ -65,6 +65,7 @@ body {
 .book-wrapper {
     display: flex;
     flex-wrap: wrap;
+    
 }
 
 .book-content {
@@ -83,6 +84,7 @@ body {
     height: auto; /* This ensures the image maintains its aspect ratio */
     margin: 0 auto; /* This centers the image in its container */
     display: block;
+    
 }
 .suggest-book-image{
     /* Add a width or max-width property to constrain the image size */
@@ -128,6 +130,7 @@ hr {
     box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
     -webkit-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
     -moz-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
+    
 }
 
 .book-image-preview:hover + .book-info-card {
@@ -193,10 +196,11 @@ hr {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    margin: 5px 0px !important;
+    margin: 5px 10px !important;
     /*word-break: break-all !important;*/
     font-size: 15px;
     width: 100%;
+    padding-bottom: 10px;
     /*-webkit-mask-image: linear-gradient(90deg, #000 60%, transparent);*/
 }
 
